Make asynchronous execution optional, and not the default
This avoids an entire class of bugs where developers forget to put
cluster.waitForAllMembers(); in appropriate points to make sure
non-leader nodes wait where they should to participate in jobs.